--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
         ".next/types/**/*.ts",
         ".next/dev/types/**/*.ts",
         "**/*.mts",
-        "app/page.jsx"
+        "app/page.jsx",
+        "next.config.mjs"
     ],
     "exclude": ["node_modules"]
 }
